@@ -3,7 +3,16 @@ X3 ChangeLog
 
 2007-02-12  Alex Schumann  <rubin@afternet.org>
 
-	* src/x3ldap.conf: fix ldap_delete not binding first, so causing
+	* src/x3ldap.c: Fix double-hashing of passwords when using ldap and
+	resetpass cookie system. 
+
+	* src/nickserv.c: Fix double-hashing of passwords when using ldap and
+	resetpass cookie system. Fix incorrect terms in ldap email error
+	message.
+
+2007-02-12  Alex Schumann  <rubin@afternet.org>
+
+	* src/x3ldap.c: fix ldap_delete not binding first, so causing
 	access denied sometimes.
 
 2007-02-12  Alex Schumann  <rubin@afternet.org>
